--- a/about_us.html
+++ b/about_us.html
@@ -86,7 +86,7 @@ Although you can use them, for a more unique website, replace these images with 
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <img class="img-responsive center-block" src="images/our_company.jpg" alt="">
+                    <img class="img-responsive center-block" src="images/our_company2.jpg" alt="">
                 </div>
                 <div class="col-sm-6">
                 	<h2 class="section-header">We are located in Asia</h2>
