--- a/about_us.html
+++ b/about_us.html
@@ -75,7 +75,7 @@ Although you can use them, for a more unique website, replace these images with 
                     For people that constantly travel for work, you can continue to learn from your tutor during your travels, as long as you have a stable and fast internet connection.  
                     <br />
                     <br />
-                    Now you don't have to waste time travelling to your tutor's location. Learn from tutors world wide.  You are no longer held hostage to the supply of tutors in your local city.</p>
+                    Now you don't have to waste time travelling to your tutor's location. Learn from tutors world wide.  You are no longer confined to the supply of tutors in your local city.</p>
                 </div>
             </div>
         </div>
