--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@ Although you can use them, for a more unique website, replace these images with 
                         <a href="index.html">Home</a>
                     </li>
                     <li>
+                        <a href="system.html">Our System</a>
+                    </li>
+                    <li>
                         <a href="about_us.html">About us</a>
                     </li>
                 </ul>
@@ -153,7 +156,7 @@ Although you can use them, for a more unique website, replace these images with 
         <div class="container">
 			<h2 class="section-header"><span class="glyphicon glyphicon-pushpin text-primary"></span><br>Learn a language online now </h2>
 			<p class="lead text-muted">Get a personal online tutor from one of our websites.  Learn 1-on-1 from the comfort of your home.  The future of language learning on the internet.</p> 
-                    <a href="about_us.html" class="btn btn-primary btn-lg">About Us</a>               
+                    <a href="system.html" class="btn btn-primary btn-lg">Our System</a>               
             </div>
         </div>
     </section>
